@@ -30,11 +30,8 @@ import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.function.Consumer;
-import java.util.function.IntFunction;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -58,16 +55,12 @@ public final class JavaLangUtils {
             void.class, Void.class
     );
 
-    public static Set<Class<?>> getAllPrimitiveTypes() {
-        return WRAPPER_CLASSES.keySet();
-    }
-
-    public static boolean isPrimitive(final Class<?> clazz) {
+    static boolean isPrimitive(final Class<?> clazz) {
         Objects.requireNonNull(clazz, "clazz is null");
         return WRAPPER_CLASSES.containsKey(clazz);
     }
 
-    public static Class<?> getWrapperType(final Class<?> clazz) {
+    static Class<?> getWrapperType(final Class<?> clazz) {
         Objects.requireNonNull(clazz, "clazz is null");
         if (!isPrimitive(clazz)) {
             throw new IllegalArgumentException("not a primitive type: " + clazz);
@@ -80,11 +73,7 @@ public final class JavaLangUtils {
                     .stream()
                     .collect(Collectors.toUnmodifiableMap(Map.Entry::getValue, Map.Entry::getKey));
 
-    public static Set<Class<?>> getAllWrapperTypes() {
-        return PRIMITIVE_CLASSES.keySet();
-    }
-
-    public static boolean isWrapper(final Class<?> clazz) {
+    static boolean isWrapper(final Class<?> clazz) {
         Objects.requireNonNull(clazz, "clazz is null");
         return PRIMITIVE_CLASSES.containsKey(clazz);
     }
@@ -92,19 +81,19 @@ public final class JavaLangUtils {
     /**
      * Starts a new {@link Thread#isDaemon() daemon} thread which continuously reads lines from
      * {@link System#in}, calls specified callable when a line tests with specified predicate,
-     * otherwise, accepts each line to specified consumer.
+     * otherwise accepts each line to, if a non-null specified,  specified consumer.
      *
      * @param predicate the predicate to test.
      * @param callable  the callable to be called when a line passes {@code predicate}.
-     * @param consumer  the consumer be accepted with lines not pass.
+     * @param consumer  the consumer be accepted with lines not pass; may be {@code null}.
      */
     public static void readLinesAndCallWhenTests(final Predicate<? super String> predicate,
                                                  final Callable<Void> callable,
                                                  final Consumer<? super String> consumer) {
         Objects.requireNonNull(predicate, "predicate is null");
         Objects.requireNonNull(callable, "callable is null");
-        var thread = new Thread(() -> {
-            var reader = new BufferedReader(new InputStreamReader(System.in));
+        Thread.ofPlatform().daemon().start(() -> {
+            final var reader = new BufferedReader(new InputStreamReader(System.in));
             try {
                 for (String line; (line = reader.readLine()) != null; ) {
                     if (predicate.test(line.strip())) {
@@ -119,21 +108,36 @@ public final class JavaLangUtils {
             }
             try {
                 callable.call();
-            } catch (InterruptedException ie) {
+            } catch (final InterruptedException ie) {
                 Thread.currentThread().interrupt();
-            } catch (Exception e) {
+            } catch (final Exception e) {
                 log.error("failed to call {}", callable, e);
             }
         });
-        thread.setDaemon(true);
-        thread.start();
     }
 
+    /**
+     * Starts a new {@link Thread#isDaemon() daemon} thread which continuously reads lines from
+     * {@link System#in}, calls specified callable when a line tests with specified predicate.
+     *
+     * @param predicate the predicate to test.
+     * @param callable  the callable to be called when a line passes the {@code predicate}.
+     */
     public static void readLinesAndCallWhenTests(final Predicate<? super String> predicate,
                                                  final Callable<Void> callable) {
         readLinesAndCallWhenTests(predicate, callable, null);
     }
 
+    /**
+     * Starts a new {@link Thread#isDaemon() daemon} thread which continuously reads lines from
+     * {@link System#in}, {@link Closeable#close() closes} specified closeable when a line tests
+     * with specified predicate, otherwise accepts each line to, if a non-null specified,  specified
+     * consumer.
+     *
+     * @param predicate the predicate to test.
+     * @param closeable the closeable to be closed when a line passes {@code predicate}.
+     * @param consumer  the consumer be accepted with lines not pass; may be {@code null}.
+     */
     public static void readLinesAndCloseWhenTests(final Predicate<? super String> predicate,
                                                   final Closeable closeable,
                                                   final Consumer<? super String> consumer) {
@@ -148,6 +152,14 @@ public final class JavaLangUtils {
         );
     }
 
+    /**
+     * Starts a new {@link Thread#isDaemon() daemon} thread which continuously reads lines from
+     * {@link System#in}, {@link Closeable#close() closes} specified closeable when a line tests
+     * with specified predicate.
+     *
+     * @param predicate the predicate to test.
+     * @param closeable the closeable to be closed when a line passes {@code predicate}.
+     */
     public static void readLinesAndCloseWhenTests(final Predicate<? super String> predicate,
                                                   final Closeable closeable) {
         readLinesAndCloseWhenTests(
@@ -159,6 +171,16 @@ public final class JavaLangUtils {
         );
     }
 
+    /**
+     * Starts a new {@link Thread#isDaemon() daemon} thread which continuously reads lines from
+     * {@link System#in}, {@link Runnable#run() runs} specified runnable when a line tests with
+     * specified predicate, otherwise accepts each line to, if a non-null specified,  specified
+     * consumer.
+     *
+     * @param predicate the predicate to test.
+     * @param runnable  the runnable to run when a line passes {@code predicate}.
+     * @param consumer  the consumer be accepted with lines not pass; may be {@code null}.
+     */
     public static void readLinesAndRunWhenTests(final Predicate<? super String> predicate,
                                                 final Runnable runnable,
                                                 final Consumer<? super String> consumer) {
@@ -173,6 +195,14 @@ public final class JavaLangUtils {
         );
     }
 
+    /**
+     * Starts a new {@link Thread#isDaemon() daemon} thread which continuously reads lines from
+     * {@link System#in}, {@link Runnable#run() runs} specified runnable when a line tests with
+     * specified predicate.
+     *
+     * @param predicate the predicate to test.
+     * @param runnable  the runnable to run when a line passes {@code predicate}.
+     */
     public static void readLinesAndRunWhenTests(final Predicate<? super String> predicate,
                                                 final Runnable runnable) {
         readLinesAndRunWhenTests(
@@ -205,6 +235,14 @@ public final class JavaLangUtils {
         return trimByCodepoints(codePoints, from, to, charset, bytes);
     }
 
+    /**
+     * Trims specified string that its number of bytes is not greater than specified number.
+     *
+     * @param string  the string to trim.
+     * @param charset the charset to encode {@code string}.
+     * @param bytes   the number of maximum bytes.
+     * @return a trimmed string whose number of bytes is not greater than {@code bytes}.
+     */
     public static String trimByCodepoints(final String string, final Charset charset,
                                           final int bytes) {
         Objects.requireNonNull(string, "string is null");
@@ -217,154 +255,8 @@ public final class JavaLangUtils {
         return new String(codePoints, 0, codePoints.length);
     }
 
-    // ----------------------------------------------------------------------------------------- int
-    public static final class Ints {
-
-        // -------------------------------------------------------------------------------------- GE
-
-        public static int requireGreaterThanOrEqualTo(
-                final int value, final int against,
-                final IntFunction<? extends IntFunction<?>> function) {
-            Objects.requireNonNull(function, "function is null");
-            if (value < against) {
-                throw new IllegalArgumentException(
-                        Optional.ofNullable(function.apply(value))
-                                .map(f -> f.apply(against))
-                                .map(Object::toString)
-                                .orElse(null)
-                );
-            }
-            return value;
-        }
-
-        private static final IntFunction<IntFunction<String>> REQUIRE_GE_FUNCTION =
-                v -> a -> String.format("%d is not greater than nor equal to %d", v, a);
-
-        public static int requireGreaterThanOrEqualTo(final int value, final int against) {
-            return requireGreaterThanOrEqualTo(
-                    value,
-                    against,
-                    REQUIRE_GE_FUNCTION
-            );
-        }
-
-        // -------------------------------------------------------------------------------------- GT
-        public static int requireGreaterThan(
-                final int value, final int against,
-                final IntFunction<? extends IntFunction<?>> function) {
-            if (requireGreaterThanOrEqualTo(value, against, function) == against) {
-                throw new IllegalArgumentException(
-                        Optional.ofNullable(function.apply(value))
-                                .map(f -> f.apply(against))
-                                .map(Object::toString)
-                                .orElse(null)
-                );
-            }
-            return value;
-        }
-
-        private static final IntFunction<IntFunction<String>> REQUIRE_GT_FUNCTION
-                = v -> a -> String.format("%d is not greater than %d", v, a);
-
-        public static int requireGreaterThan(final int value, final int against) {
-            return requireGreaterThan(value, against, REQUIRE_GT_FUNCTION);
-        }
-
-        // -------------------------------------------------------------------------------------- LE
-        public static int requireLessThanOrEqualTo(
-                final int value, final int against,
-                final IntFunction<? extends IntFunction<?>> function) {
-            Objects.requireNonNull(function, "function is null");
-            if (value < against) {
-                throw new IllegalArgumentException(function.apply(value).apply(against).toString());
-            }
-            return value;
-        }
-
-        private static final IntFunction<IntFunction<String>> REQUIRE_LE_FUNCTION
-                = v -> a -> String.format("%d is not less than nor equal to %d", v, a);
-
-        public static int requireLessThanOrEqualTo(final int value, final int against) {
-            return requireLessThanOrEqualTo(value, against, REQUIRE_LE_FUNCTION);
-        }
-
-        // -------------------------------------------------------------------------------------- LT
-        public static int requireLessThan(
-                final int value, final int against,
-                final IntFunction<? extends IntFunction<?>> function) {
-            Objects.requireNonNull(function, "function is null");
-            if (requireLessThanOrEqualTo(value, against, function) == against) {
-                throw new IllegalArgumentException(function.apply(value).apply(against).toString());
-            }
-            return value;
-        }
-
-        private static final IntFunction<IntFunction<String>> REQUIRE_LT_FUNCTION
-                = v -> a -> String.format("%d is not less than %d", v, a);
-
-        public static int requireLessThan(final int value, final int against) {
-            return requireLessThan(value, against, REQUIRE_LT_FUNCTION);
-        }
-
-        // --------------------------------------------------------------------------- (Non)Positive
-        public static int requireNonPositive(final int value, final IntFunction<?> function) {
-            Objects.requireNonNull(function, "function is null");
-            return requireLessThanOrEqualTo(
-                    value,
-                    0,
-                    v -> a -> function.apply(v).toString()
-            );
-        }
-
-        private static final IntFunction<?> REQUIRE_NP_FUNCTION =
-                v -> String.format("value(%1$d) is not non-positive", v);
-
-        public static int requireNonPositive(final int value) {
-            return requireNonPositive(value, REQUIRE_NP_FUNCTION);
-        }
-
-        public static int requirePositive(final int value, final IntFunction<?> function) {
-            return requireGreaterThanOrEqualTo(value, 0, v -> a -> function.apply(v));
-        }
-
-        private static final IntFunction<?> REQUIRE__P_FUNCTION =
-                v -> String.format("value(%1$d) is not positive", v);
-
-        public static int requirePositive(final int value) {
-            return requirePositive(value, REQUIRE__P_FUNCTION);
-        }
-
-        // --------------------------------------------------------------------------- (Non)Negative
-
-        public static int requireNonNegative(final int value, final IntFunction<?> function) {
-            return requireGreaterThanOrEqualTo(value, 0, v -> a -> function.apply(v));
-        }
-
-        private static final IntFunction<?> REQUIRE_NN_FUNCTION =
-                v -> String.format("value(%1$d) is not non-negative", v);
-
-        public static int requireNonNegative(final int value) {
-            return requireNonNegative(value, REQUIRE_NN_FUNCTION);
-        }
-
-        public static int requireNegative(final int value, final IntFunction<?> function) {
-            return requireGreaterThanOrEqualTo(value, 0, v -> a -> function.apply(v));
-        }
-
-        private static final IntFunction<?> REQUIRE__N_FUNCTION =
-                v -> String.format("value(%1$d) is not negative", v);
-
-        public static int requireNegative(final int value) {
-            return requireNegative(value, REQUIRE__N_FUNCTION);
-        }
-
-        // -----------------------------------------------------------------------------------------
-        private Ints() {
-            throw new AssertionError("instantiation is not allowed");
-        }
-    }
-
     // ---------------------------------------------------------------------------------------------
+    @_ExcludeFromCoverage_PrivateConstructor_Obviously
     private JavaLangUtils() {
         throw new AssertionError("instantiation is not allowed");
     }
